syntax = "proto3";

package user;

option go_package="./;user";

service UserService{
    rpc CreateUser (User) returns (Response){};
    rpc GetUser (Request) returns (Response){};
    rpc GetAll (Request) returns (Response){};
    rpc AuthUser (User) returns(Token){};
    rpc ValidateToken (Token) returns (Token){};
}
message User {
    int64 ID=1;
    string name=2;
    string company=3;
    string email=4;
    string password=5;
}
message Request{
    int64 ID=1;
}

message Response{
    int64 ID=1;
    User user=2;
    repeated User users=3;
    repeated Error errors =4;
}

message Error {
    int32 code=1;
    string description=2;
}
message Token{
    string token=1;
    bool valid =2;
    repeated Error errors=3;
}